[gd_scene load_steps=12 format=3 uid="uid://03v0wvw7mx5u"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_8uciq"]
[ext_resource type="PackedScene" uid="uid://dc2o1q08tqv8d" path="res://Scenes/bg.tscn" id="1_wdu7y"]
[ext_resource type="Texture2D" uid="uid://0oln872qjaix" path="res://Assets/Other/Gui/Button.png" id="2_sqq1g"]
[ext_resource type="FontFile" uid="uid://1lwd7qjkjc2f" path="res://Assets/Other/Kurland.otf" id="3_dgd4g"]
[ext_resource type="AudioStream" uid="uid://3bsd3ktfnbgp" path="res://Assets/Other/Music/Menu_Music.mp3" id="5_bkyjw"]
[ext_resource type="AudioStream" uid="uid://ltyl4w34d655" path="res://Assets/Other/Music/prees_button_sound.mp3" id="6_y8ci3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4xkta"]
texture = ExtResource("2_sqq1g")
region_rect = Rect2(621.9, 427.1, 436.7, 189.2)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xduve"]
texture = ExtResource("2_sqq1g")
region_rect = Rect2(162.928, 425.545, 437.576, 196.643)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w7k8o"]
texture = ExtResource("2_sqq1g")
region_rect = Rect2(1076.57, 426.562, 439.347, 194.872)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lmiue"]
texture = ExtResource("2_sqq1g")
region_rect = Rect2(2045.56, 1562.79, 53.1469, 102.751)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2ducc"]
texture = ExtResource("2_sqq1g")
region_rect = Rect2(2024.3, 1649.6, 19.4871, 63.7761)

[node name="Menu" type="Node2D"]
script = ExtResource("1_8uciq")

[node name="BG" parent="." instance=ExtResource("1_wdu7y")]

[node name="PLAY" type="Button" parent="."]
offset_left = 750.0
offset_top = 300.0
offset_right = 1052.0
offset_bottom = 448.0
scale = Vector2(1.2, 1.2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_dgd4g")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxTexture_4xkta")
theme_override_styles/hover = SubResource("StyleBoxTexture_xduve")
theme_override_styles/pressed = SubResource("StyleBoxTexture_w7k8o")
theme_override_styles/disabled = SubResource("StyleBoxTexture_lmiue")
theme_override_styles/focus = SubResource("StyleBoxTexture_2ducc")
text = "PLAY"

[node name="GAME_NAME" type="Label" parent="."]
offset_left = 1.0
offset_top = -1.0
offset_right = 1923.0
offset_bottom = 298.0
theme_override_fonts/font = ExtResource("3_dgd4g")
theme_override_font_sizes/font_size = 150
text = "Monster Buster Hero"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EXIT" type="Button" parent="."]
offset_left = 750.0
offset_top = 800.0
offset_right = 1052.0
offset_bottom = 948.0
scale = Vector2(1.2, 1.2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_dgd4g")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxTexture_4xkta")
theme_override_styles/hover = SubResource("StyleBoxTexture_xduve")
theme_override_styles/pressed = SubResource("StyleBoxTexture_w7k8o")
theme_override_styles/disabled = SubResource("StyleBoxTexture_lmiue")
theme_override_styles/focus = SubResource("StyleBoxTexture_2ducc")
text = "EXIT"

[node name="GUIDE" type="Button" parent="."]
offset_left = 750.0
offset_top = 550.0
offset_right = 1052.0
offset_bottom = 698.0
scale = Vector2(1.2, 1.2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_dgd4g")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxTexture_4xkta")
theme_override_styles/hover = SubResource("StyleBoxTexture_xduve")
theme_override_styles/pressed = SubResource("StyleBoxTexture_w7k8o")
theme_override_styles/disabled = SubResource("StyleBoxTexture_lmiue")
theme_override_styles/focus = SubResource("StyleBoxTexture_2ducc")
text = "GUIDE"

[node name="BackGroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_bkyjw")
volume_db = -7.0
autoplay = true

[node name="ChangeSceneMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_y8ci3")
volume_db = 8.0

[connection signal="pressed" from="PLAY" to="." method="_on_play_pressed"]
[connection signal="pressed" from="EXIT" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="GUIDE" to="." method="_on_guide_pressed"]
